# covert-semantic

./: .gitignore  FINDINGS-plain.md  PRIOR_ART.md  README.md  REFERENCE_MODEL_SETUP.md  pyproject.toml
csd/: __init__.py  constructions.py  corpus.py  evaluation.py  features.py  harness.py  imaging.py  monitor_cache.py  monitors.py  payloads.py  senders.py  stats.py  surprisal.py
docs/: 2026-06-26-covert-semantic-detection-design.md  2026-06-28-covert-semantic-detection-phase1.5-cross-monitor-design.md  2026-06-28-covert-semantic-detection-phase1.5-cross-monitor-results.md  2026-06-28-covert-semantic-detection-phase2-rigor-design.md  2026-06-28-covert-semantic-detection-phase2-rigor-results.md  2026-07-16-covert-semantic-modality-n30-results.md  FUTURE-WORK.md
experiments/: image_carrier_careful_20260716.json  image_carrier_pilot.json  image_carrier_pilot.py  monitor_cache_20260628.jsonl  monitor_cache_image_20260712.jsonl  monitor_cache_image_careful_20260716.jsonl  monitor_cache_informed_20260628.jsonl  phase1_5_20260628.json  phase1_5_cross_monitor.py  phase1_5_informed_20260628.json  phase1_live_n30.json  phase1_live_n30_both.json  phase1_reproduce.py  phase1_result.json  phase2_distributional.py  phase2_live_n20.json  phase2_result.json  phase2_rigor.py  phase2_rigor_20260628.json
tests/: test_constructions.py  test_corpus.py  test_cross_perplexity.py  test_distributional.py  test_ensemble.py  test_evaluation.py  test_features.py  test_harness.py  test_image_carrier.py  test_imaging.py  test_monitor_cache.py  test_monitors.py  test_naive_monitor.py  (+7 more)
(+6 files in other folders)
